# torch-points3d

./: pyproject.toml  requirements.txt
torch_points3d/core/data_transform/: grid_transform.py
torch_points3d/core/losses/: __init__.py
torch_points3d/datasets/segmentation/: __init__.py  s3dis.py  scannet.py
torch_points3d/metrics/: base_tracker.py
