[tool.poetry]
name = "torch_points3d"
version = "1.4.6+cu121" # This will be overriden by the CI at publish time
description = "Point Cloud Deep Learning Extension Library for PyTorch"
authors = ["Thomas Chaton <thomas.chaton.ai@gmail.com>", "Nicolas Chaulet <nicolas.chaulet@gmail.com>"]
packages = [
    {include = "torch_points3d"},
]
readme = "README.md"
documentation = "https://torch-points3d.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
omegaconf = "^2.1.1"

# Why do we modify the requirements?
# This framework is intended for running common deep learning models for point cloud analysis.
# The original requirements are quite diverse and are not suited for our purposes (i.e. running KPConv in OSS).

# Another thing to note is that torch-cluster, torch-scatter and torch-sparse wheels are
# provided by pyg.org, while torch-points-kernels whell is provided by Promaton.
# Please see https://github.com/promaton/ios/tree/main/projects/oss#third-party-libraries for more details on how to build the wheels.

torch-points-kernels = { version = "==0.7.2+cu121", source = "promaton" }
torch-cluster = { version = "==1.6.3+pt24cu121", source = "pyg" }
torch-scatter = { version = "==2.1.2+pt24cu121", source = "pyg" }
torch-sparse = { version = "==0.6.18+pt24cu121", source = "pyg" }
torch-geometric = "^2.6.1"

# Additional constraints on no major version creep
torch = "~2.4.1"
numba = "^0.60.0"
numpy = "<2.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[[tool.poetry.source]]
name = "promaton"
url = "https://pypi.dev.promaton.ai"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.4.0%2Bcu121.html"
priority = "supplemental"
